--- a/expense.conf
+++ b/expense.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://backend-dev.pallavi-practice.co.uk:8080/; }
+location /api/ { proxy_pass http://52.202.202.225:8080/; }
 
 location /health {
   stub_status on;
